--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -113,6 +113,7 @@ body {
 @import "_pages/account";
 @import "_pages/card";
 @import "_pages/checkout";
+@import "_pages/thanks";
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
