--- a/src/scss/_pages/account.scss
+++ b/src/scss/_pages/account.scss
@@ -243,6 +243,9 @@
 .account-orders {
     width: 100%;
     max-width: rem(1100);
+    @media (max-width: $mobile) {
+        margin-bottom: rem(-15);
+    }
     &__title {
         font-weight: 400;
         @include adaptiveValue("margin-bottom", 50, 30);
@@ -253,7 +256,7 @@
             @media (max-width: $mobile) {
                 overflow: auto;
                 margin: 0px rem(-15);
-                padding: 0px rem(15);
+                padding: 0px rem(15) rem(15) rem(15);
                 @include scrollbars(rem(10), $blue, $white, true);
             }
         }
@@ -271,23 +274,25 @@
         border: rem(1) solid $light;
         display: flex;
         align-items: center;
-        @media (max-width: em(1300)) {
-            padding: rem(5);
-            min-height: rem(80);
-        }
         &:not(:first-child) {
             border-top: none;
         }
         &:last-child {
             overflow: hidden;
-            border-radius: 0px 0px rem(10) rem(10);
+            border-bottom-right-radius: rem(10);
+            border-bottom-left-radius: rem(10);
         }
         &_top {
-            border-radius: rem(10) rem(10) 0px 0px !important;
+            border-top-left-radius: rem(10);
+            border-top-right-radius: rem(10);
             overflow: hidden;
             background-color: rgba(15, 175, 233, 0.1);
             border: none;
             min-height: rem(65);
+        }
+        @media (max-width: em(1300)) {
+            padding: rem(5);
+            min-height: rem(80);
         }
     }
 
