--- a/src/scss/_pages/single.scss
+++ b/src/scss/_pages/single.scss
@@ -76,6 +76,24 @@
         font-weight: 400;
     }
 
+    &__favoutites {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: rem(5);
+        color: $blue;
+    }
+
+    &__heart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 rem(20);
+        img {
+            width: 100%;
+        }
+    }
+
     &__subtitle {
         @extend %h5;
         @include adaptiveValue("font-size", 22, 18);
@@ -163,7 +181,7 @@
             height: rem(8);
             background: $text_1;
             opacity: 0.2;
-            transition: opacity 0.8s ease 0s;
+            transition: opacity 0.8s ease 0s, width 0.8s ease 0s, height 0.8s ease 0s;
             border-radius: 50%;
             @media (any-hover: hover) {
                 &:hover {
